# marvelous-databricks-course-Duck-m-a-n

./: .gitignore  CODEOWNERS  README.md  databricks.yml  main.py  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
m5_forecasting/: data_processor.py  utils.py
