[project]
name = "m5-forecasting"
version = "0.0.1"
description = "MLOps with Nixtla on Databricks"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
                "databricks-feature-engineering>=0.6, <1",
                "cloudpickle>=2.2.1, <3",
                "cffi>=1.15.1, <2",
                "pyarrow >=14.0.1, <16",
                "mlflow>=2.16.0, <3",
                "statsforecast[plotly]>=1.7.8, <2",
                "mlforecast>=0.13.5, <2",
                "coreforecast>=0.0.13.1, <1",
                "utilsforecast>=0.2.7, <1",    
                "lightgbm>=4.3.0, <5",
                "scipy>=1.11.1, <2",
                "scikit-learn>=1.3.0, <2",
                "pandas>=1.5.3, <2",
                "numpy>=1.23.5, <2",
                "plotly>=5.9.0, <6",
                "matplotlib>=3.7.2, <4"
                ]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.1, <16",
       "databricks-sdk>=0.32.0, <0.33",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2",
       "pre-commit>=3.4.0, <4"
       ]

[tool.ruff]
line-length = 120
lint.select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
